--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="stylesheet" href="css/loader1.css" />
+    <!-- <link rel="stylesheet" href="css/loader1.css" /> -->
+    <link rel="stylesheet" href="css/loader2.css" />
     <title>CSS Loaders</title>
   </head>
   <body>
-    <div class="loader">
+    <!-- LOADER 1 -->
+    <!-- <div class="loader">
       <div class="circle"></div>
       <div class="circle"></div>
-    </div>
+    </div> -->
+
+    <!-- LOADER 2 -->
+    <div class="loader">Loading</div>
   </body>
 </html>
