--- a/index.html
+++ b/index.html
@@ -5,26 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/style.css" />
-    <!-- <link rel="stylesheet" href="css/loader1.css" /> -->
+    <link rel="stylesheet" href="css/loader1.css" />
     <!-- <link rel="stylesheet" href="css/loader2.css" /> -->
-    <link rel="stylesheet" href="css/loader3.css" />
+    <!-- <link rel="stylesheet" href="css/loader3.css" /> -->
     <title>CSS Loaders</title>
   </head>
   <body>
     <!-- LOADER 1 -->
-    <!-- <div class="loader">
+    <div class="loader">
       <div class="circle"></div>
       <div class="circle"></div>
-    </div> -->
+    </div>
 
     <!-- LOADER 2 -->
     <!-- <div class="loader">Loading</div> -->
 
     <!-- LOADER 3 -->
-    <div class="loader">
+    <!-- <div class="loader">
       <span></span>
       <span></span>
       <span></span>
-    </div>
+    </div> -->
+
+    <section class="main">
+      <h1>Welcome to the title</h1>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Officia nam
+        ullam fuga repellat officiis, commodi vel accusamus nemo rerum
+        necessitatibus reprehenderit.
+      </p>
+      <a href="#" class="btn">Read More</a>
+    </section>
+
+    <script src="js/main.js"></script>
   </body>
 </html>
